WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
285808
REGRESSION (
288409@main
): [ MacOS iOS ] 3x imported/w3c/web-platform-tests/navigation-api/navigation are consistent failures
https://bugs.webkit.org/show_bug.cgi?id=285808
Summary
REGRESSION ( 288409@main): [ MacOS iOS ] 3x imported/w3c/web-platform-tests/n...
Jay Stfleur
Reported
2025-01-11 19:57:57 PST
Created
attachment 473869
[details]
Diff for all 3 tests Description: imported/w3c/web-platform-tests/navigation-api/navigation-activation/activation-traverse-not-in-entries.html imported/w3c/web-platform-tests/navigation-api/navigation-methods/disambigaute-forward.html imported/w3c/web-platform-tests/navigation-api/navigation-methods/disambigaute-traverseTo-forward-multiple.html all 3 tests are consistent failures on MacOS and iOS WK2, after changes on
288449@main
Buildbot URL:
https://build.webkit.org/#/builders/1227/builds/1245
History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-activation%2Factivation-traverse-not-in-entries.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-methods%2Fdisambigaute-forward.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fnavigation-api%2Fnavigation-methods%2Fdisambigaute-traverseTo-forward-multiple.html
Diff/Image Diff/Crash Log: --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/navigation-methods/disambigaute-forward-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/navigation-api/navigation-methods/disambigaute-forward-actual.txt @@ -1,4 +1,4 @@ -PASS navigation.forward() goes to the nearest forward entry +FAIL navigation.forward() goes to the nearest forward entry assert_equals: expected 0 but got 1
Attachments
Diff for all 3 tests
(3.29 KB, application/zip)
2025-01-11 19:57 PST
,
Jay Stfleur
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2025-01-11 20:17:37 PST
Test gardening commit
288770@main
(aff26e20aa2d): <
https://commits.webkit.org/288770@main
> Reviewed commits have been landed. Closing PR #38901 and removing active labels.
Jay Stfleur
Comment 2
2025-01-13 07:51:10 PST
These tests regressed on commit @
288409@main
, I just noticed the typo. text expectations are covering the failures.
EWS
Comment 3
2025-01-13 08:07:26 PST
Test gardening commit
288803@main
(fda7b07073d0): <
https://commits.webkit.org/288803@main
> Reviewed commits have been landed. Closing PR #38936 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2025-01-13 09:38:35 PST
<
rdar://problem/142819918
>
Charlie Wolfe
Comment 5
2025-01-14 22:08:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39053
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug