REGRESSION ( 288409@main): [ MacOS iOS ] 3x imported/w3c/web-platform-tests/navigation-api/navigation are consistent failures https://bugs.webkit.org/show_bug.cgi?id=285808 rdar://142819918

Reviewed by NOBODY (OOPS!).

After 288409@main itemID() is the same for all items in a history tree. Also compare frameItemID() to
match previous behavior.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/history/HistoryItem.h:
(WebCore::HistoryItem::operator== const):